modules/015-admission-policy-engine/charts/constraint-templates/tests/deny-exec-heritage/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8DenyExecHeritage
metadata:
  name: security-policy-test
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
    scope: Namespaced
